# climbing-center

./: .gitignore  .graphqlconfig  LICENSE  TODO.md  db.sqlite3  development.sh  docker-compose.dev.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  vite.config.js  windi.config.js
climbing_center/: asgi.py  settings.py  urls.py  wsgi.py
docker/development/: Dockerfile  entrypoint.sh
docker/production/: Dockerfile  seed.sh
service/: models.py  permission.py  schema.py  serializers.py  urls.py  views.py
service/assets/: App.vue  apollo.js  main.js  schema.graphql  store.js
service/assets/components/: Loader.vue  Modal.vue
service/assets/components/input/: ButtonInput.vue  CheckboxInput.vue  DatepickerInput.vue  FileInput.vue  SelectInput.vue  TextInput.vue
service/assets/pages/: Client.vue  Clients.vue  Error.vue  Index.vue  Intervals.vue  Login.vue  NotFound.vue  PassTypes.vue  Passes.vue  Register.vue  SectionTypes.vue  Sections.vue  Users.vue
service/assets/router/: index.js  routes.js
service/migrations/: 0001_initial.py  0002_alter_client_card_number.py  0002_entries.py  0003_auto_20211126_2007.py  0004_auto_20211127_1229.py  0005_alter_client_card_number.py  0006_alter_client_card_number.py  0007_alter_instructor_username.py
service/seed/: 0001_Role.json
service/templates/_partials/: layout.html
service/templatetags/: vite.py
