[tool.poetry]
name = "climbing_center"
version = "1.0.0"
description = ""
authors = ["Patrycja Rećko"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-environ = "^0.4.5"
djangorestframework = "^3.12.4"
django-model-utils = "^4.1.1"
django-filter = "^21.1"
djangorestframework-simplejwt = "^5.0.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.17.0"
pre-commit = "^2.12.0"
django-proxy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
